--- a/index.html
+++ b/index.html
@@ -11,6 +11,8 @@
     <script src="node_modules/systemjs/dist/system.src.js"></script>
     <link rel="stylesheet" href="node_modules/bootstrap/dist/css/bootstrap.min.css">
     <link rel="stylesheet" href="styles/style.css">
+    <link href="//maxcdn.bootstrapcdn.com/font-awesome/4.2.0/css/font-awesome.min.css" rel="stylesheet">
+    <link rel="icon" href="/assets/pinterest_logo.png">
     <!-- 2. Configure SystemJS -->
     <script src="systemjs.config.js"></script>
     <script>
@@ -21,4 +23,25 @@
   <body>
     <my-app>Loading...</my-app>
   </body>
+  <footer>
+    
+    <nav class="navbar navbar-light bg-faded navbar-fixed-bottom" role="navigation">
+      <div class ="container">
+        <div class="footer" id="footer">
+          <p class="navbar-text">&copy; Copyright Niko & Meri 2016. All rights reserved.</p>
+            <div class="pull-right">
+                    <ul class="social">
+                            <li> <a href="#"> <i class="fa fa-facebook">     </i> </a> </li>
+                            <li> <a href="#"> <i class="fa fa-twitter">       </i> </a> </li>
+                            <li> <a href="#"> <i class="fa fa-google-plus">   </i> </a> </li>
+                            <li> <a href="#"> <i class="fa fa-pinterest">     </i> </a> </li>
+                            <li> <a href="#"> <i class="fa fa-youtube">       </i> </a> </li>
+                    </ul>
+                
+          </div>  
+        </div>
+      </div>
+    </nav>
+
+  </footer>
 </html>
